--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches:
       - main
+env:
+  # openssl_location: /usr/lib/ssl
+  openssl_location: /usr/local/ssl
   
 jobs:
   build:
@@ -14,8 +17,9 @@ jobs:
     steps:        
       - name: List OpenSSL directories
         run: |
-          openssl version -d
-          ls /usr/lib/ssl
-          ls /usr/lib/ssl/bin
-          ls /usr/lib/ssl/include
-          ls /usr/lib/ssl/lib
+          sudo find libssl.a / | grep libssl.a
+          sudo find libcrypto.a / | grep libcrypto.a
+          ls ${{ env.openssl_location }}
+          ls ${{ env.openssl_location }}/bin
+          ls ${{ env.openssl_location }}/include
+          ls ${{ env.openssl_location }}/lib
