--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -9,7 +9,8 @@ on:
       - main
 env:
   # openssl_location: /usr/lib/ssl
-  openssl_location: /usr/lib/x86_64-linux-gnu
+  # openssl_location: /usr/lib/x86_64-linux-gnu  // Static lib location
+  openssl_location: /usr/local/ssl
   
 jobs:
   build:
