--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -11,7 +11,7 @@ env:
   # openssl_location: /usr/lib/ssl
   # openssl_location: /usr/local/ssl
   # openssl_location: /usr/lib/x86_64-linux-gnu  // Static lib location
-  openssl_location: /usr/include
+  openssl_location: /usr/include/openssl
   
 jobs:
   build:
